--- a/sass/wwtguide.scss
+++ b/sass/wwtguide.scss
@@ -12,14 +12,14 @@
 
 @font-face {
   font-family: "UniversLTPro";
-  src: url("/assets/39762C_0_0.eot?#iefix") format("embedded-opentype"), url("/assets/39762C_0_0.woff2") format("woff2"), url("/assets/39762C_0_0.woff") format("woff"), url("/assets/39762C_0_0.ttf") format("truetype");
+  src: url("assets/39762C_0_0.eot?#iefix") format("embedded-opentype"), url("assets/39762C_0_0.woff2") format("woff2"), url("assets/39762C_0_0.woff") format("woff"), url("assets/39762C_0_0.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "UniversLTPro";
-  src: url("/assets/39762C_2_0.eot?#iefix") format("embedded-opentype"), url("/assets/39762C_2_0.woff2") format("woff2"), url("/assets/39762C_2_0.woff") format("woff"), url("/assets/39762C_2_0.ttf") format("truetype");
+  src: url("assets/39762C_2_0.eot?#iefix") format("embedded-opentype"), url("assets/39762C_2_0.woff2") format("woff2"), url("assets/39762C_2_0.woff") format("woff"), url("assets/39762C_2_0.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
