--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "section.html" %}
 
 {% block content %}
-<p class="page-title"><a class="noul" href="{{ section.permalink | safe }}">{{ section.title }}</a></p>
-{{ section.content | safe }}
+  <!-- not including the title: already included in the navbar -->
+  {{ section.content | safe }}
 {% endblock content %}
