--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block cur_page_nav %}
+{{ macros::current_page_nav(toc=page.toc) }}
+{% endblock %}
+
 {% block content %}
     <h1>{{ page.title }}</h1>
     {{ page.content | safe }}
