templates/index.html: some extra spacing on the title page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,7 @@
 
 {% block content %}
   <!-- not including the title: already included in the navbar -->
+  <div class="index-spacer"></div>
+
   {{ section.content | safe }}
 {% endblock content %}
