Wire some basic prev/next buttons back in

--- a/templates/base.html
+++ b/templates/base.html
@@ -147,6 +147,17 @@
             {% endblock content %}
           </main>
         </div>
+
+        <!-- Prev/next links -->
+        <div class="prev-link prevnext-link">
+          {% block prev_link %}
+          {% endblock prev_link %}
+        </div>
+
+        <div class="next-link prevnext-link">
+          {% block next_link %}
+          {% endblock next_link %}
+        </div>
       </div>
     </div>
 
