--- a/templates/section.html
+++ b/templates/section.html
@@ -22,9 +22,9 @@
             {% if found_current %}
                 {% if subsection.pages %}
                     {% set last_page = subsection.pages | last %}
-                    <a class="previous" href="{{ last_page.permalink }}"><</a>
+                    {{ macros::nav_prev_item(rel_top=rel_top, title=last_page.title, path=last_page.path) }}
                 {% else %}
-                    <a class="previous" href="{{ subsection.permalink }}"><</a>
+                    {{ macros::nav_prev_item(rel_top=rel_top, title=subsection.title, path=subsection.path) }}
                 {% endif %}
                 {# no break #}
                 {% set_global found_current = false %}
@@ -36,7 +36,7 @@
 {% block next_link %}
     {% if section.pages %}
         {% set next_page = section.pages | first %}
-        <a class="next" href="{{ next_page.permalink }}">></a>
+        {{ macros::nav_next_item(rel_top=rel_top, title=next_page.title, path=next_page.path) }}
     {% else %}
         {# No page in the section, find the link for the following section #}
         {% set index = get_section(path="_index.md") %}
@@ -44,7 +44,7 @@
         {% for s in index.subsections %}
             {% set subsection = get_section(path=s) %}
             {% if found_current %}
-                <a class="next" href="{{ subsection.permalink }}">></a>
+                {{ macros::nav_next_item(rel_top=rel_top, title=subsection.title, path=subsection.path) }}
                 {# no break #}
                 {% set_global found_current = false %}
             {% endif %}
