Use p.page-title for page titles, not h1

--- a/templates/section.html
+++ b/templates/section.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{ section.title }}</h1>
+    <p class="page-title">{{ section.title }}</p>
     {{ section.content | safe }}
 {% endblock content %}
 
