--- a/templates/page.html
+++ b/templates/page.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
+    <p class="page-title">{{ page.title }}</p>
     {{ page.content | safe }}
 {% endblock content %}
 
