--- a/sass/wwtguide.scss
+++ b/sass/wwtguide.scss
@@ -19,6 +19,9 @@ $menu-bar-height: 50px;
 $deemph-color: #999;
 $background-color: #fff;
 $icon-hover-color: #000;
+$callout-bg-color: #f6f6f6;
+$callout-note-color: #3af049;
+$callout-warning-color: #e3e03b;
 
 @import "typography";
 @import "content";
