templates/base.html: add the inevitable Google Analytics capability

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>{% block title %}{{ config.title }}{% endblock title %}</title>
     <!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
+    {% if config.extra.google_analytics_id %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ config.extra.google_analytics_id }}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', '{{ config.extra.google_analytics_id }}');
+    </script>
+    {% endif %}
+
     {% block js %}
     {% endblock js %}
     {% block css %}
