--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -119,6 +119,23 @@
     padding: 4px;
   }
 
+  // Embeds
+
+  .youtube-embed {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   // We configure Zola to insert anchor links for headers in the Markdown.
   // These show up as `a.zola-anchor` tags inside the <hN> tag to the left
   // of the header text.
