templates/base.html: add a mechanism for importing extra stylesheets
Inspired by https://github.com/janbaudisch/zola-sam/pull/2/files .

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,11 @@
     {% block css %}
     <link rel="stylesheet" href="{{ rel_top ~ 'wwtguide.css' | safe }}">
     <link rel="stylesheet" href="{{ rel_top ~ 'assets/font-awesome.min.css' | safe }}">
+    {% if config.extra.stylesheets %}
+    {% for stylesheet in config.extra.stylesheets %}
+        <link rel="stylesheet" href="{{ rel_top ~ stylesheet | safe }}">
+    {% endfor %}
+    {% endif %}
     {% endblock css %}
     {% block extra_head %}
     {% endblock extra_head %}
