Update logo and sponsorship branding

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
     <div id="sidebar" class="sidebar">
       <div class="sidebar-scrollbox">
         <!-- logo -->
-        <a class="sidebar-logo" href="//docs.worldwidetelescope.org/"></a>
+        <a class="sidebar-logo" href="https://docs.worldwidetelescope.org/"></a>
 
         <!-- table of contents -->
         <details open>
@@ -136,16 +136,15 @@
           <nav role="navigation">
             <ul>
               <li><a href="{{ config.extra.github_base | safe }}">GitHub Repository</a></li>
-              <li><a href="//docs.worldwidetelescope.org/">WWT Docs Home</a></li>
-              <li><a href="//worldwidetelescope.org/About">About WWT</a></li>
-              <li><a href="//aas.org/about-aas">About AAS</a></li>
+              <li><a href="https://docs.worldwidetelescope.org/">WWT Docs Home</a></li>
+              <li><a href="https://worldwidetelescope.org/about/">About WWT</a></li>
             </ul>
           </nav>
         </details>
 
         <!-- footer -->
         <footer>
-          Copyright {{ now() | date(format="%Y") }} <a href="https://aas.org/">AAS</a>. HTML generated
+          Copyright {{ now() | date(format="%Y") }} WWT contributors. HTML generated
           with <a href="https://www.getzola.org/">Zola</a>.
         </footer>
       </div>
